syntax = "proto3";

package uber.yarpc.internal.examples.protobuf.example;

option go_package = "examplepb";

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string value = 2;
}

message SetValueRequest {
  string key = 1;
  string value = 2;
}

message SetValueResponse {}

service KeyValue {
  rpc GetValue(GetValueRequest) returns (GetValueResponse);
  rpc SetValue(SetValueRequest) returns (SetValueResponse);
}
